--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,7 +360,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/jeffrey-swanson-T72-kQyQxtA-unsplash.jpg")  bottom center;
+  background: url("../img/jeffrey-swanson-T72-kQyQxtA-unsplash.jpg") bottom center;
   background-size: cover;
   position: relative;
 }
@@ -686,7 +686,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.8)), url("../img/cta-bg.jpg") center center;
+  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.8)), url("../img/jeffrey-swanson-T72-kQyQxtA-unsplash.jpg") center center;
   background-size: cover;
   padding: 60px 0;
 }
@@ -1095,6 +1095,7 @@ section {
 }
 
 .team .member .member-img {
+
   position: relative;
   overflow: hidden;
 }
