--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -771,7 +771,9 @@ section {
   height: 444px;
   width: 444px;
   object-fit: cover;
-
+  border-radius: 20%;
+  border: 2px solid #585858;
+  filter: drop-shadow(0.25rem 0.25rem 0.25rem grey);
   position: relative;
   top: 0;
   transition: all 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -787,6 +789,8 @@ section {
   transition: all ease-in-out 0.3s;
   background: #e43c5c;
   padding: 15px 20px;
+  border-radius: 20%;
+
 }
 
 .portfolio .portfolio-item .portfolio-info h4 {
@@ -821,7 +825,7 @@ section {
 }
 
 .portfolio .portfolio-item:hover img {
-  top: -30px;
+  /* top: -30px; */
 }
 
 .portfolio .portfolio-item:hover .portfolio-info {
