--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
+  background-color: #181a1b;
+
 }
 
 a {
@@ -576,6 +578,8 @@ section {
 # Services
 --------------------------------------------------------------*/
 .services {
+  background-color: #181a1b;
+
   padding-bottom: 30px;
 }
 
@@ -583,7 +587,8 @@ section {
   padding: 60px 30px;
   position: relative;
   overflow: hidden;
-  background: #fff;
+  background: #181a1b;
+
   box-shadow: 2px 0 35px 0 rgba(68, 88, 144, 0.12);
   transition: all 0.3s ease-in-out;
   border-radius: 8px;
@@ -649,6 +654,8 @@ section {
 # Features
 --------------------------------------------------------------*/
 .features {
+  background-color: #181a1b;
+
   padding-top: 20px;
 }
 
@@ -906,7 +913,8 @@ section {
 --------------------------------------------------------------*/
 .pricing .box {
   padding: 20px;
-  background: #f9f9f9;
+  background: #181a1b;
+
   text-align: center;
   border-radius: 8px;
   position: relative;
@@ -1021,6 +1029,8 @@ section {
 # F.A.Q
 --------------------------------------------------------------*/
 .faq {
+  background: #181a1b;
+
   padding: 60px 0;
 }
 
@@ -1092,7 +1102,8 @@ section {
 # Team
 --------------------------------------------------------------*/
 .team {
-  background: #fff;
+  background: #181a1b;
+
   padding: 60px 0;
 }
 
@@ -1101,7 +1112,8 @@ section {
   overflow: hidden;
   text-align: center;
   border-radius: 5px;
-  background: #fff;
+  background: #181a1b;
+
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
@@ -1181,7 +1193,10 @@ section {
 --------------------------------------------------------------*/
 .contact .info {
   width: 100%;
-  background: #fff;
+
+  background: #181a1b;
+
+
 }
 
 .contact .info i {
@@ -1227,7 +1242,7 @@ section {
 
 .contact .php-email-form {
   width: 100%;
-  background: #fff;
+  background: #181a1b;
 }
 
 .contact .php-email-form .form-group {
@@ -1236,7 +1251,7 @@ section {
 
 .contact .php-email-form .error-message {
   display: none;
-  color: #fff;
+  background: #181a1b;
   background: #ed3c0d;
   text-align: left;
   padding: 15px;
@@ -1261,6 +1276,10 @@ section {
   background: #fff;
   text-align: center;
   padding: 15px;
+}
+
+.contact .col .row {
+  background: #181a1b;
 }
 
 .contact .php-email-form .loading:before {
@@ -1883,14 +1902,18 @@ section {
 #footer {
   color: #444444;
   font-size: 14px;
-  background: #f6f4f4;
+  background: #181a1b;
+
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
 #footer .footer-top {
   padding: 60px 0 30px 0;
-  background: #fff;
+  background: #181a1b;
+
 }
+
+
 
 #footer .footer-top .footer-contact {
   margin-bottom: 30px;
