--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -783,7 +783,7 @@ section {
   object-fit: cover;
   border-radius: 20%;
   border: 2px solid #585858;
-  filter: drop-shadow(0.25rem 0.25rem 0.25rem grey);
+  filter: drop-shadow(0.15rem 0.15rem 0.15rem 0.15rem grey);
   position: relative;
   top: 0;
   transition: all 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
