--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1053,6 +1053,7 @@ section {
 .faq .faq-list {
   padding: 0;
   list-style: none;
+  color: #fff;
 }
 
 .faq .faq-list li {
@@ -1979,7 +1980,7 @@ section {
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #444444;
+  color: #e43c5c;
   position: relative;
   padding-bottom: 12px;
 }
