--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1397,7 +1397,7 @@ section {
 --------------------------------------------------------------*/
 .breadcrumbs {
   padding: 15px 0;
-  background: #f6f4f4;
+  background: #222;
   margin-top: 67px;
 }
 
