--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ h6 {
 }
 
 #header .logo {
-  font-size: 30px;
+  font-size: 20px;
   margin: 0;
   padding: 0;
   line-height: 1;
@@ -92,8 +92,11 @@ h6 {
   color: #fff;
 }
 
-#header .logo img {
-  max-height: 40px;
+#header .logo2 img {
+  max-height: 125px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 #header.header-scrolled,
@@ -291,7 +294,7 @@ h6 {
   bottom: 15px;
   left: 15px;
   padding: 10px 0;
-  background-color: #fff;
+  background-color: #444444;
   overflow-y: auto;
   transition: 0.3s;
 }
@@ -742,6 +745,7 @@ section {
 @media (min-width: 1024px) {
   .cta {
     background-attachment: fixed;
+
   }
 }
 
