--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -526,6 +526,8 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+.about {}
+
 .about .content h3 {
   font-weight: 600;
   font-size: 26px;
@@ -744,7 +746,7 @@ section {
   border: 2px solid #e43c5c;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 124px) {
   .cta {
     background-attachment: fixed;
 
@@ -1227,6 +1229,8 @@ section {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
+
+
 .contact .info {
   width: 100%;
 
@@ -1949,6 +1953,8 @@ section {
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
+
+
 #footer {
   color: #444444;
   font-size: 14px;
