--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2399,7 +2399,7 @@ section {
   top: 70px;
   left: 70px;
   position: absolute;
-  background-image: url(https://360imagem.com/google/images/wpp-icon.png);
+  background-image: url("/assets/img/back/wp.png");
   background-size: 40px 40px;
   background-color: rgba(30, 30, 30, .1);
   background-position: center center;
@@ -2712,7 +2712,7 @@ section {
 .cbh-ph-img-circle1 {}
 
 .cbh-phone.cbh-green .cbh-ph-circle {
-  border-color: rgb(0, 242, 164)
+  border-color: rgb(255, 255, 255)
 }
 
 .cbh-phone.cbh-green .cbh-ph-circle-fill {
