--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1304,8 +1304,7 @@ section {
 
 .contact .php-email-form .form-group .form-control {
   background: #222;
-
-
+  color: #18d26e
 }
 
 .contact .php-email-form .error-message {
