--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,6 +246,11 @@ h6 {
   .navbar .dropdown .dropdown:hover>ul {
     left: -100%;
   }
+
+  #header .logo {
+    font-size: 3vh;
+    font-size: 3vw;
+  }
 }
 
 /**
@@ -267,6 +272,11 @@ h6 {
 
   .navbar ul {
     display: none;
+  }
+
+  #header .logo {
+    font-size: 3vh;
+    font-size: 3vw;
   }
 }
 
